Added user-profile feature that is saved to cloudinary

--- a/.env
+++ b/.env
@@ -5,5 +5,8 @@ DB_USERNAME=root
 DB_PASSWORD=1234
 SECRET_KEY=shhh
 BOOTSTRAP_SERVE_LOCAL=False
+CLOUD_NAME = "dpj7nflp7", 
+API_KEY = "823743778694381", 
+API_SECRET = "Uge4whwQhtHws-LmdtSNC4rCocM" 
  PIPENV_VENV_IN_PROJECT=1
 
